--- a/styles/styles.css
+++ b/styles/styles.css
@@ -3,15 +3,15 @@
    =============================== */
 
 /* Importar en orden: variables → reset → componentes */
-@import url('./_variables.css');
-@import url('./_reset.css');
-@import url('./_layout.css');
-@import url('./_nav.css');
-@import url('./_hero.css');
-@import url('./_buttons.css');
-@import url('./_progress.css');
-@import url('./_map.css');
-@import url('./_panel.css');
-@import url('./_game.css');
-@import url('./_footer.css');
-@import url('./_donar-page.css');
+@import url('variables.css');
+@import url('reset.css');
+@import url('layout.css');
+@import url('nav.css');
+@import url('hero.css');
+@import url('buttons.css');
+@import url('progress.css');
+@import url('map.css');
+@import url('panel.css');
+@import url('game.css');
+@import url('footer.css');
+@import url('donar-page.css');
